@@ -19,8 +19,8 @@ This Work includes contributions authored by David E. Jones, not as a
     <entity entity-name="SubscreensItem" package-name="moqui.screen" authorize-skip="view" cache="true">
         <field name="screenLocation" type="text-medium" is-pk="true"/>
         <field name="subscreenName" type="text-medium" is-pk="true"/>
-        <field name="userId" type="id-very-long" is-pk="true">
-            <description>These settings are per-user. To apply to all users set this to "_NA_".</description>
+        <field name="userGroupId" type="id" is-pk="true">
+            <description>These settings are for a UserGroup. To apply to all users just use the ALL_USERS UserGroup.</description>
         </field>
         <field name="subscreenLocation" type="text-medium"/>
         <field name="menuTitle" type="text-medium">
